fix(responsive): fix responsive layout on iPhone

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -440,3 +440,9 @@ select:-webkit-autofill:focus {
   100% { transform: translate(5%,0) }
 }
 
+@media (max-width: 768px) {
+  .slick-prev,
+  .slick-next {
+    display: none !important;
+  }
+}
